--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
+    "check:local": "yarn generate && php -S localhost:3000 -t dist",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "deploy": "yarn generate:gh-pages && push-dir --dir=dist --branch=gh-pages --cleanup"
