--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ node_js:
   - "10"
 
 cache:
+  yarn: true
   directories:
     - "node_modules"
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
 branches:
   only:
