--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.1",
     "cross-env": "^7.0.2",
+    "katex": "^0.12.0",
     "koa": "^2.13.0",
     "nuxt": "^2.14.1"
   },
