--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
   "name": "ripmath-evo",
   "version": "1.0.0",
-  "description": "Ripasso Matematico Evolution",
-  "author": "Lingyong Sun",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
+    "start": "nuxt start",
     "generate": "nuxt generate",
-    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
-    "check:local": "yarn generate && php -S localhost:3000 -t dist",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "yarn lint:js",
     "deploy": "yarn generate:gh-pages && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.1",
-    "cross-env": "^7.0.2",
+    "@nuxt/content": "^1.5.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "katex": "^0.12.0",
-    "koa": "^2.13.0",
-    "nuxt": "^2.14.1"
+    "nuxt": "^2.14.0"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "^3.1.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "nodemon": "^1.19.1",
-    "prettier": "1.18.2",
-    "push-dir": "^0.4.1"
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
   }
 }
