--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,node,nuxtjs,nuxt,visualstudiocode,intellij+all,eclipse
+
+# Service worker
+sw.*
