--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "deploy": "yarn generate:gh-pages && push-dir --dir=dist --branch=gh-pages --cleanup"
