--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js",
+    "lint:fix": "eslint --fix",
     "deploy": "yarn generate:gh-pages && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
